# rbuilder

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config-backtest-example.toml  config-live-example.toml  config-optimism-local.toml  config-playground.toml
.github/workflows/: bench.yaml  checks.yaml  checks_docker.yaml  release.yaml
crates/eth-sparse-mpt/: Cargo.toml  README.md
crates/eth-sparse-mpt/benches/: trie_example_bench.rs  trie_insert_bench.rs  trie_nodes_benches.rs
crates/eth-sparse-mpt/src/: lib.rs  test_utils.rs  utils.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/: change_set.rs  hash.rs  mod.rs  shared_cache.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/trie_fetcher/: mod.rs
crates/eth-sparse-mpt/src/sparse_mpt/: fixed_trie.rs
crates/eth-sparse-mpt/src/sparse_mpt/diff_trie/: mod.rs  tests.rs
crates/op-rbuilder/: Cargo.toml
crates/op-rbuilder/src/: args.rs  main.rs  monitoring.rs  payload_builder.rs  payload_builder_vanilla.rs  tx_signer.rs
crates/op-rbuilder/src/integration/: mod.rs
crates/op-rbuilder/src/tester/: mod.rs
crates/rbuilder/: Cargo.toml
crates/rbuilder/benches/benchmarks/: mev_boost.rs
crates/rbuilder/src/: lib.rs  validation_api_client.rs
crates/rbuilder/src/backtest/: backtest_build_block.rs  backtest_build_range.rs  execute.rs  mod.rs  results_store.rs  store.rs
crates/rbuilder/src/backtest/build_block/: backtest_build_block.rs  landed_block_from_db.rs  mod.rs  synthetic_orders.rs
crates/rbuilder/src/backtest/fetch/: flashbots_db.rs  mempool.rs  mev_boost.rs  mod.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs
crates/rbuilder/src/backtest/redistribute/cli/: mod.rs
crates/rbuilder/src/backtest/restore_landed_orders/: find_landed_orders.rs  resim_landed_block.rs
crates/rbuilder/src/building/: built_block_trace.rs  evm_inspector.rs  mod.rs  order_commit.rs  payout_tx.rs  sim.rs
crates/rbuilder/src/building/block_orders/: mod.rs  multi_share_bundle_merger.rs  prioritized_order_store.rs  share_bundle_merger.rs  test_context.rs  test_data_generator.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs
crates/rbuilder/src/building/builders/parallel_builder/: block_building_result_assembler.rs  conflict_resolvers.rs  conflict_resolving_pool.rs  conflict_task_generator.rs  groups.rs  mod.rs  order_intake_store.rs  simulation_cache.rs
crates/rbuilder/src/building/testing/: test_chain_state.rs
crates/rbuilder/src/building/testing/bundle_tests/: mod.rs  setup.rs
crates/rbuilder/src/building/testing/evm_inspector_tests/: mod.rs  setup.rs
crates/rbuilder/src/integration/: playground.rs  simple.rs
crates/rbuilder/src/integration/test_data/: config-playground-http-blocklist.toml  config-playground.toml
crates/rbuilder/src/live_builder/: base_config.rs  block_list_provider.rs  cli.rs  config.rs  mod.rs  watchdog.rs
crates/rbuilder/src/live_builder/block_output/: bid_observer.rs  block_sealing_bidder_factory.rs  relay_submit.rs
crates/rbuilder/src/live_builder/block_output/bid_value_source/: best_bid_sync_source.rs
crates/rbuilder/src/live_builder/block_output/bidding/: interfaces.rs  parallel_sealer_bid_maker.rs  sequential_sealer_bid_maker.rs  true_block_value_bidder.rs  wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/building/: mod.rs  unfinished_block_building_sink_muxer.rs
crates/rbuilder/src/live_builder/order_input/: clean_orderpool.rs  mod.rs  order_replacement_manager.rs  orderpool.rs  replaceable_order_sink.rs  rpc_server.rs  txpool_fetcher.rs
crates/rbuilder/src/live_builder/payload_events/: mod.rs  relay_epoch_cache.rs
crates/rbuilder/src/live_builder/simulation/: mod.rs  sim_worker.rs  simulation_job.rs
crates/rbuilder/src/live_builder/testdata/: config_with_relay_override.toml
crates/rbuilder/src/mev_boost/: mod.rs  rpc.rs  sign_payload.rs  submission.rs
crates/rbuilder/src/primitives/: mev_boost.rs  mod.rs  order_builder.rs  serialize.rs  test_data_generator.rs
crates/rbuilder/src/provider/: mod.rs  reth_prov.rs  state_provider_factory_from_provider_factory.rs
crates/rbuilder/src/roothash/: mod.rs  prefetcher.rs
crates/rbuilder/src/telemetry/: metrics.rs
crates/rbuilder/src/telemetry/metrics/: mod.rs  tracing_metrics.rs
crates/rbuilder/src/telemetry/servers/: full.rs
crates/rbuilder/src/utils/: bls.rs  error_storage.rs  mod.rs  noncer.rs  provider_factory_reopen.rs  provider_head_state.rs  test_utils.rs  tx_signer.rs
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
crates/sysperf/: Cargo.toml
crates/sysperf/src/: lib.rs
crates/test-relay/: Cargo.toml
crates/test-relay/src/: main.rs  metrics.rs  relay.rs  validation_api_client.rs
docs/: LIVEBUILDER_DATAFLOW.md
scripts/ci/: benchmark-in-ci.sh
